# shellkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_ja.md  README_ko.md  README_zh.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
benchmarks/: benchmark_bytes.py  benchmark_concat.py  benchmark_syscall.py
examples/: README.md  README_ja.md  README_ko.md  README_zh.md
i18n/: core.py
i18n/lang/: __init__.py  en.json  ja.json  ko.json
inspector/debug/: command.py  core.py  layers.py
inspector/trace/: context.py  core.py  decorator.py
libc/exit/: __init__.py  hooks.py  internal.py
libc/printf/: __init__.py  format.py  internal.py  parser.py  renderer.py  utils.py
libc/write/: __init__.py  internal.py  utils.py
native/: libc.c  syscall.c
shell/: app.py  main.py
shell/docs/manuals/: __init__.py
shell/docs/texts/: __init__.py  help.py  reminder.py
shell/engine/: dispatcher.py  exclamation.py  fallback.py  register.py  resolver.py  tables.py  text_processing.py
shell/engine/builtins/: alias.py  arch.py  cd.py  clear.py  copyright.py  date.py  debug.py  echo.py  env.py  exit.py  export.py  help.py  history.py  license.py  locale.py  machinfo.py  printf.py  pwd.py  sleep.py  tree.py  uname.py  which.py  whoami.py
shell/environs/: initialize.py  store.py
shell/environs/accessors/: history.py  home.py  internal.py  lang.py  ps1.py  pwd.py  shell.py  sysinfo.py  user.py
shell/environs/patches/: home.py  lang.py  pwd.py  sysinfo.py
shell/runtime/: banner.py  input.py  launcher.py  metadata.py  readline.py  reminder.py  repl.py
shell/sidecar/: __init__.py  parser.py
shell/sidecar/args/: banner.py  command.py  debug.py  history.py  prompt.py  quiet.py  reminder.py  safe.py  trace_echo.py  version.py
shell/state/: detection.py
shellkit/i18n/lang/: en.json  ja.json  ko.json  zh.json
shellkit/inspector/debug/: core.py
shellkit/libc/printf/: internal.py
shellkit/shell/docs/manuals/en/: su.md
shellkit/shell/docs/manuals/ja/: alias.md  arch.md  cd.md  clear.md  copyright.md  date.md  echo.md  env.md  exit.md  export.md  help.md  license.md  locale.md  machinfo.md  printf.md  pwd.md  sleep.md  su.md  tree.md  uname.md  which.md  whoami.md
shellkit/shell/docs/manuals/ko/: su.md
shellkit/shell/docs/texts/: help.py
shellkit/shell/engine/: tables.py
shellkit/shell/engine/builtins/: __init__.py  printf.py  sleep.py  su.py
shellkit/shell/runtime/: metadata.py
syscall/: bindings.py
tests/: test_cstr.py  test_exit.py  test_sprintf.py
(+22 files in other folders)
